fix : handle responsiveness of modal and navbar on mobile display

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -14,11 +14,14 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  background-image: url("background.png");
   font-family: var(--font-default);
   font-size: 18px;
   max-width: 1300px;
   margin: 0 auto;
+}
+
+ul li {
+  list-style-type: none;
 }
 
 p {
@@ -31,14 +34,25 @@ img {
 }
 
 .topnav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   overflow: hidden;
   margin: 3.5%;
 }
 .header-logo {
   float: left;
+  align-self: baseline;
 }
 .main-navbar {
+  position: relative;
   float: right;
+}
+.main-navbar.open ul {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: baseline;
 }
 .topnav a {
   float: left;
@@ -62,17 +76,21 @@ img {
   background-color: #ff0000;
   color: #ffffff;
   border-radius: 15px;
+  text-decoration: underline;
+  text-underline-offset: 5px;
 }
 
-.topnav .icon {
+.icon {
+  cursor: pointer;
   display: none;
+  color: red;
 }
 
-@media screen and (max-width: 768px) {
-  .topnav a {
+@media screen and (max-width: 1000px) {
+  nav ul {
     display: none;
   }
-  .topnav a.icon {
+  .topnav .icon {
     float: right;
     display: block;
   }
@@ -86,6 +104,7 @@ img {
     position: absolute;
     right: 0;
     top: 0;
+    color: white;
   }
   .topnav.responsive a {
     float: none;
@@ -115,6 +134,15 @@ main {
   margin: 1px 20px 15px;
   border-radius: 2rem;
   text-align: justify;
+}
+@media screen and (max-width: 500px) {
+  main {
+    padding: 0.5vw 0px 0px 0px;
+    margin: 0;
+  }
+  .hero-section {
+    padding: 0.5vw 2vw 0px 2vw;
+  }
 }
 
 .modal-btn {
@@ -161,20 +189,14 @@ main {
 
 .bground {
   display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
   height: 100%;
   width: 100%;
   overflow: auto;
-  background-color: rgba(26, 39, 156, 0.4);
 }
 
 .error {
   display: none;
   font-size: 12px;
-
   color: rgb(255, 48, 48);
   margin-bottom: 5px;
 }
@@ -193,6 +215,12 @@ main {
   padding-top: 10px;
 }
 
+@media screen and (max-width: 550px) {
+  .content {
+    border-radius: 0;
+    margin: 0;
+  }
+}
 .modal-body {
   padding: 15px 8%;
   margin: 15px auto;
@@ -415,7 +443,7 @@ input[data-error]::after {
   font-size: 16px;
 }
 .hero-section {
-  min-height: 93vh;
+  min-height: 660px;
   border-radius: 10px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -472,6 +500,7 @@ input[data-error]::after {
   height: 100%;
   display: block;
   padding: 0;
+  object-fit: cover;
 }
 .copyrights {
   color: #fe142f;
@@ -505,16 +534,25 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 4.5rem;
+    font-size: 2.5rem;
     white-space: normal;
+  }
+
+  .hero-headline br {
+    display: none;
   }
   .hero-text {
     width: unset;
-    font-size: 1.5rem;
+    font-size: 0.9rem;
+
+    width: 100%;
+
+    margin-top: 17px;
+    padding: 0;
   }
   .hero-img img {
     border-radius: 10px;
-    margin-top: 40px;
+    margin-top: 20px;
   }
   .hero-section > .btn-signup {
     display: block;
